<resources>
    <string name="app_name">Save The Bees</string>

    <!--Start screen-->
    <string name="startGame">Start Game</string>
    <string name="bees">Save the bees</string>
    <string name="credits">Credits</string>
    <string name="howToPlay">How To Play</string>
    <string name="highScore">High Score</string>
    <string name="beeImage">Bee image</string>

    <!--Credits-->
    <string name="developersTxt">Developers:</string>
    <string name="names">Mikko Karlsson and Roosa Mäkelä</string>
    <string name="arMmodels">3D Models:</string>
    <string name="maker">Poly by Google</string>
    <string name="maker2">Boneboys</string>
    <string name="icons">Icons:</string>
    <string name="maker3">Freepik from www.flaticon.com</string>
    <string name="maker4">Animation from http://bestanimations.com/Animals/Insects/Bees/Bees.html</string>
    <string name="hive">Hive image</string>

    <!--How to play-->
    <string name="howTo">How to play:</string>
    <string name="instructions">When you start the game move your phone in circles to find a platform.
    When the toast More bees appears start tapping on the bees to get points.
    Walking around also gives you points.</string>
    <string name="stepsT">Shows all the steps taken while playing the game.</string>
    <string name="scoreT">Shows the game score.</string>
    <string name="hand">Hand image</string>
    <string name="bee">Shows a bee and platform</string>
    <string name="numbers">Shows your steps and score</string>

    <!--Options-->
    <string name="gameIdea">Idea of the game:</string>
    <string name="idea">To collect as many points as possible by walking and tapping bees.</string>
    <string name="infoTitle">Info about bees</string>
    <string name="beeInfo">Bees are important pollinators for flowers, fruits and vegetables. Over the past 15 years, colonies of bees have been disappearing even up to 90%</string>
    <string name="wasMade">This game has been made to raise awareness about bees. You save the bees by catching as many as you can and by walking you take care of yourself.</string>
    <string name="clickBee">Click to Wikipedia</string>

    <!--High score screen-->
    <string name="nameHint">Players name</string>
    <string name="scoreHint">Score</string>
    <string name="playerName">Players name</string>
    <string name="myScore">Players score</string>
    <string name="saveBtn">Save</string>
    <string name="playerName2">Jippe</string>
    <string name="myScore2">1005</string>
    <string name="playerName3">Roska</string>
    <string name="myScore3">650</string>
    <string name="TopScores">Top Scores:</string>
    <string name="edit">Edit</string>

    <!--AR-->
    <string name="exitBtn">Exit button</string>

    <!--Dialog-->
    <string name="honey">Honey</string>

    <!--step sensor-->
    <string name="showsSteps">0</string>

    <!--Points-->
    <string name="showPoints">0</string>

    <!--PopUp-->
    <string name="exitTitle">Exit Game?</string>
    <string name="exitMessage">Do you want to exit the game?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!--toast-->
    <string name="searchArea">SEARCH AREA FOR MORE BEES!</string>
    <string name="moreBees">BEEZ!!!</string>
    <string name="tapBee">Tap the bee to Wikipedia</string>
    <string name="noName">Enter name</string>
    <string name="noScore">Enter score</string>
    <string name="dataSaved">Data saved. Go back and return to see the changes.</string>

</resources>
