<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/developersTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developersTxt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/names" />

        <TextView
            android:id="@+id/arModels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/arMmodels"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maker" />

        <TextView
            android:id="@+id/maker2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maker2" />


            <!--<android.support.design.widget.FloatingActionButton-->
                <!--android:id="@+id/backBtn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_margin="16dp"-->
                <!--app:fabSize="mini"-->
                <!--app:srcCompat="@android:drawable/ic_menu_add" />-->

    </LinearLayout>

</android.support.constraint.ConstraintLayout>